--- a/3ds.html
+++ b/3ds.html
@@ -1,86 +1,37 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
+    <title>Jumpy</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3DS Platformer</title>
-    <style>
-        body { margin: 0; overflow: hidden; background-color: #87CEEB; }
-        canvas { display: block; margin: auto; background-color: #ffffff; }
-    </style>
-    <script src="https://wolfyxon.github.io/3ds-web-stuff/scripts/global.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="3DS game">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="jumpy.css">
+
+    <script src="global.js" type="text/javascript"></script>
+    <script src="jumpy.js" type="text/javascript"></script>
+
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="240"></canvas>
-    <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
+    <div id="screens">
+        <div id="top-screen">
+            <h1 id="gameover"></h1>
+            <div id="player"></div>
+        </div>
+        <div id="bottom-screen">
+            <img src="img/jumpy.png" id="img-jumpy" alt="Jumpy spritesheet">
+            <img src="img/spike.png" id="img-spike" alt="Spike sprite">
 
-        let player = {
-            x: 50,
-            y: 200,
-            width: 50,
-            height: 50,
-            gravity: 0.5,
-            velocityY: 0,
-            jumpStrength: -10,
-            isJumping: false
-        };
 
-        let keys = {
-            left: false,
-            right: false,
-            jump: false
-        };
+            <div id="stats">
+                <p id="time">Time: 0:00:00</p>
+                <p id="high-score">High score: 0:00:00</p>
+            </div>
+            <h2 id="manual">&#xE079;, &#xE000; or tap to jump<br>&#xE07A; to quickly fall</h2>
+            <p class="note">Based on Chrome T-rex game</p>
 
-        // Initialize input detection
-        function setupInput() {
-            // Assuming global.js has a method to bind buttons
-            // Replace 'left', 'right', and 'jump' with appropriate 3DS button mappings
-            bindButton('left', () => keys.left = true);
-            bindButton('right', () => keys.right = true);
-            bindButton('jump', () => {
-                if (!player.isJumping) {
-                    player.velocityY = player.jumpStrength;
-                    player.isJumping = true;
-                }
-            });
-
-            unbindButton('left', () => keys.left = false);
-            unbindButton('right', () => keys.right = false);
-            unbindButton('jump', () => keys.jump = false);
-        }
-
-        function update() {
-            // Handle movement
-            if (keys.left) {
-                player.x -= 5;
-            }
-            if (keys.right) {
-                player.x += 5;
-            }
-
-            // Gravity
-            player.velocityY += player.gravity;
-            player.y += player.velocityY;
-
-            // Prevent falling through the ground
-            if (player.y + player.height >= canvas.height) {
-                player.y = canvas.height - player.height;
-                player.velocityY = 0;
-                player.isJumping = false;
-            }
-
-            // Draw everything
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.fillStyle = 'red';
-            ctx.fillRect(player.x, player.y, player.width, player.height);
-
-            requestAnimationFrame(update);
-        }
-
-        setupInput(); // Set up the 3DS input
-        update();
-    </script>
+        </div>
+    </div>
 </body>
 </html>
