--- a/3ds.html
+++ b/3ds.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Platformer Game</title>
-    <script src="global.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="global.css">
     <style>
         body {
             margin: 0;
@@ -17,17 +15,6 @@
             display: block;
             margin: 0 auto;
         }
-        .platform {
-            position: absolute;
-            background-color: #228B22;
-            height: 20px;
-        }
-        .player {
-            position: absolute;
-            background-color: #FF0000;
-            width: 30px;
-            height: 30px;
-        }
     </style>
 </head>
 <body>
@@ -35,10 +22,10 @@
         <canvas id="gameCanvas" width="320" height="240"></canvas>
     </div>
     <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
+        var canvas = document.getElementById('gameCanvas');
+        var ctx = canvas.getContext('2d');
 
-        const player = {
+        var player = {
             x: 50,
             y: 200,
             width: 30,
@@ -50,7 +37,7 @@
             grounded: false
         };
 
-        const platforms = [
+        var platforms = [
             { x: 0, y: 220, width: 320, height: 20 },
             { x: 100, y: 180, width: 100, height: 20 },
             { x: 200, y: 140, width: 100, height: 20 }
@@ -63,9 +50,10 @@
 
         function drawPlatforms() {
             ctx.fillStyle = '#228B22';
-            platforms.forEach(platform => {
+            for (var i = 0; i < platforms.length; i++) {
+                var platform = platforms[i];
                 ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
-            });
+            }
         }
 
         function update() {
@@ -74,7 +62,8 @@
 
             // Check for collision with platforms
             player.grounded = false;
-            platforms.forEach(platform => {
+            for (var i = 0; i < platforms.length; i++) {
+                var platform = platforms[i];
                 if (player.x < platform.x + platform.width &&
                     player.x + player.width > platform.x &&
                     player.y + player.height < platform.y + platform.height &&
@@ -83,7 +72,7 @@
                     player.y = platform.y - player.height;
                     player.grounded = true;
                 }
-            });
+            }
 
             // Prevent falling through the ground
             if (player.y > canvas.height) {
@@ -111,20 +100,19 @@
             drawPlayer();
         }
 
-        const keys = {};
-        window.addEventListener('keydown', (e) => {
+        var keys = {};
+        window.addEventListener('keydown', function(e) {
             keys[e.key] = true;
         });
-        window.addEventListener('keyup', (e) => {
+        window.addEventListener('keyup', function(e) {
             keys[e.key] = false;
         });
 
         function gameLoop() {
             update();
-            requestAnimationFrame(gameLoop);
         }
 
-        gameLoop();
+        setInterval(gameLoop, 1000 / 30); // Set a 30 FPS interval
     </script>
 </body>
 </html>
