--- a/3ds.html
+++ b/3ds.html
@@ -18,6 +18,9 @@
     </style>
 </head>
 <body>
+    <script src="scripts/global.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.sstatic.net/Shared/stacks.css?v=619122b796ae">
     <div id="gameContainer">
         <canvas id="gameCanvas" width="320" height="240"></canvas>
     </div>
