--- a/3ds.html
+++ b/3ds.html
@@ -3,96 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Platformer Game</title>
+    <title>Platformer Game</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
-            background-color: #87CEEB;
+            background-color: #87CEEB; /* Sky blue background */
         }
+
         #gameCanvas {
-            background-color: #8B4513;
             display: block;
             margin: 0 auto;
+            background-color: #8B4513; /* Brown ground color */
+        }
+
+        .player {
+            position: absolute;
+            background-color: #FF0000;
+            width: 30px;
+            height: 30px;
+        }
+
+        .platform {
+            position: absolute;
+            background-color: #228B22;
+            height: 20px;
         }
     </style>
 </head>
 <body>
-    <script src="scripts/global.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.sstatic.net/Shared/stacks.css?v=619122b796ae">
-    <div id="gameContainer">
-        <canvas id="gameCanvas" width="320" height="240"></canvas>
-    </div>
+    <canvas id="gameCanvas" width="320" height="240"></canvas>
     <script>
-        var canvas = document.getElementById('gameCanvas');
-        var ctx = canvas.getContext('2d');
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
 
-        var player = {
+        // Define key mappings for 3DS buttons, WASD, and arrow keys
+        const keyMap = {
+            13: "A",      // 3DS "A" Button
+            65: "A",      // "A" key on keyboard
+            87: "Up",     // "W" key on keyboard
+            68: "Right",  // "D" key on keyboard
+            83: "Down",   // "S" key on keyboard
+            37: "Left",   // Left Arrow
+            38: "Up",     // Up Arrow
+            39: "Right",  // Right Arrow
+            40: "Down"    // Down Arrow
+        };
+
+        // Player properties
+        const player = {
             x: 50,
             y: 200,
             width: 30,
             height: 30,
-            speed: 4,          // Increased speed for faster movement
+            speed: 4,
             dy: 0,
-            gravity: 0.8,      // Increased gravity for quicker fall
-            jumpPower: -12,    // Adjusted jump power for snappier jump
+            gravity: 0.8,
+            jumpPower: -12,
             grounded: false
         };
 
-        var platforms = [
+        // Platform properties
+        const platforms = [
             { x: 0, y: 220, width: 320, height: 20 },
             { x: 100, y: 180, width: 100, height: 20 },
             { x: 200, y: 140, width: 100, height: 20 }
         ];
 
+        // Draw player
         function drawPlayer() {
             ctx.fillStyle = '#FF0000';
             ctx.fillRect(player.x, player.y, player.width, player.height);
         }
 
+        // Draw platforms
         function drawPlatforms() {
             ctx.fillStyle = '#228B22';
-            for (var i = 0; i < platforms.length; i++) {
-                var platform = platforms[i];
+            platforms.forEach(platform => {
                 ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
-            }
+            });
         }
 
+        // Handle key events
+        const keys = {};
+        window.addEventListener('keydown', (e) => {
+            if (keyMap[e.keyCode]) keys[keyMap[e.keyCode]] = true;
+        });
+        window.addEventListener('keyup', (e) => {
+            if (keyMap[e.keyCode]) keys[keyMap[e.keyCode]] = false;
+        });
+
+        // Update player and check collisions
         function update() {
             player.dy += player.gravity;
             player.y += player.dy;
 
             // Check for collision with platforms
             player.grounded = false;
-            for (var i = 0; i < platforms.length; i++) {
-                var platform = platforms[i];
-                if (player.x < platform.x + platform.width &&
+            platforms.forEach(platform => {
+                if (
+                    player.x < platform.x + platform.width &&
                     player.x + player.width > platform.x &&
                     player.y + player.height < platform.y + platform.height &&
-                    player.y + player.height + player.dy >= platform.y) {
+                    player.y + player.height + player.dy >= platform.y
+                ) {
                     player.dy = 0;
                     player.y = platform.y - player.height;
                     player.grounded = true;
                 }
-            }
+            });
 
-            // Prevent falling through the ground
+            // Prevent player from falling through the bottom
             if (player.y > canvas.height) {
                 player.y = canvas.height;
                 player.dy = 0;
             }
 
             // Handle player movement
-            if (keys['ArrowLeft']) {
-                player.x -= player.speed;
-            }
-            if (keys['ArrowRight']) {
-                player.x += player.speed;
-            }
-            if (keys['ArrowUp'] && player.grounded) {
-                player.dy = player.jumpPower;
-            }
+            if (keys["Left"]) player.x -= player.speed;
+            if (keys["Right"]) player.x += player.speed;
+            if (keys["Up"] && player.grounded) player.dy = player.jumpPower;
 
             // Keep player within canvas bounds
             if (player.x < 0) player.x = 0;
@@ -103,19 +133,8 @@
             drawPlayer();
         }
 
-        var keys = {};
-        window.addEventListener('keydown', function(e) {
-            keys[e.key] = true;
-        });
-        window.addEventListener('keyup', function(e) {
-            keys[e.key] = false;
-        });
-
-        function gameLoop() {
-            update();
-        }
-
-        setInterval(gameLoop, 1000 / 60); // Set to 60 FPS for smoother gameplay
+        // Start game loop at 60 FPS
+        setInterval(update, 1000 / 60);
     </script>
 </body>
 </html>
