--- a/3ds.html
+++ b/3ds.html
@@ -34,11 +34,11 @@
 <body>
     <canvas id="gameCanvas" width="320" height="240"></canvas>
     <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
+        var canvas = document.getElementById('gameCanvas');
+        var ctx = canvas.getContext('2d');
 
         // Define key mappings for 3DS buttons, WASD, and arrow keys
-        const keyMap = {
+        var keyMap = {
             13: "A",      // 3DS "A" Button
             65: "A",      // "A" key on keyboard
             87: "Up",     // "W" key on keyboard
@@ -51,7 +51,7 @@
         };
 
         // Player properties
-        const player = {
+        var player = {
             x: 50,
             y: 200,
             width: 30,
@@ -64,7 +64,7 @@
         };
 
         // Platform properties
-        const platforms = [
+        var platforms = [
             { x: 0, y: 220, width: 320, height: 20 },
             { x: 100, y: 180, width: 100, height: 20 },
             { x: 200, y: 140, width: 100, height: 20 }
@@ -79,40 +79,41 @@
         // Draw platforms
         function drawPlatforms() {
             ctx.fillStyle = '#228B22';
-            platforms.forEach(platform => {
+            for (var i = 0; i < platforms.length; i++) {
+                var platform = platforms[i];
                 ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
-            });
+            }
         }
 
         // Handle key events
-        const keys = {};
-        window.addEventListener('keydown', (e) => {
+        var keys = {};
+        window.addEventListener('keydown', function(e) {
             if (keyMap[e.keyCode]) keys[keyMap[e.keyCode]] = true;
         });
-        window.addEventListener('keyup', (e) => {
+        window.addEventListener('keyup', function(e) {
             if (keyMap[e.keyCode]) keys[keyMap[e.keyCode]] = false;
         });
 
         // Update player and check collisions
         function update() {
-            // Update the player's vertical position
             player.dy += player.gravity;
             player.y += player.dy;
 
             // Check for collision with platforms
             player.grounded = false;
-            platforms.forEach(platform => {
+            for (var i = 0; i < platforms.length; i++) {
+                var platform = platforms[i];
                 if (
                     player.x < platform.x + platform.width &&
                     player.x + player.width > platform.x &&
                     player.y + player.height < platform.y + platform.height &&
                     player.y + player.height + player.dy >= platform.y
                 ) {
-                    player.dy = 0; // Reset vertical velocity on collision
-                    player.y = platform.y - player.height; // Position player on top of the platform
-                    player.grounded = true; // Player is grounded
+                    player.dy = 0;
+                    player.y = platform.y - player.height;
+                    player.grounded = true;
                 }
-            });
+            }
 
             // Prevent player from falling through the bottom
             if (player.y > canvas.height) {
