--- a/3ds.html
+++ b/3ds.html
@@ -26,6 +26,18 @@
             background-color: #8B4513; /* Brown ground color */
         }
 
+        #timeDisplay {
+            position: absolute;
+            bottom: 0; /* Position at the bottom of the screen */
+            left: 0;
+            right: 0;
+            text-align: center; /* Center the text */
+            color: white; /* White text color for visibility */
+            font-size: 14px; /* Font size */
+            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+            padding: 5px; /* Padding for the text */
+        }
+
         .player {
             position: absolute;
             background-color: #FF0000; /* Red player color */
@@ -44,6 +56,7 @@
     <div class="dual-screen">
         <canvas id="gameCanvas" width="320" height="240"></canvas>
     </div>
+    <div id="timeDisplay">Time Played: 0s</div> <!-- Time display -->
     <script>
         var canvas = document.getElementById('gameCanvas');
         var ctx = canvas.getContext('2d');
@@ -80,6 +93,10 @@
             { x: 100, y: 180, width: 100, height: 20 },
             { x: 200, y: 140, width: 100, height: 20 }
         ];
+
+        // Timer variables
+        var timePlayed = 0; // in seconds
+        var timerInterval;
 
         // Draw player
         function drawPlayer() {
@@ -150,10 +167,19 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawPlatforms();
             drawPlayer();
+
+            // Update the timer display
+            timePlayed += 1 / 60; // Increment time based on frame rate
+            document.getElementById('timeDisplay').innerText = `Time Played: ${Math.floor(timePlayed)}s`;
         }
 
-        // Start game loop at 60 FPS
-        setInterval(update, 1000 / 60);
+        // Start the timer
+        timerInterval = setInterval(update, 1000 / 60);
+
+        // Stop the timer if the game is exited (optional)
+        window.onbeforeunload = function() {
+            clearInterval(timerInterval);
+        };
     </script>
 </body>
 </html>
