--- a/3ds.html
+++ b/3ds.html
@@ -2,34 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=321, initial-scale=1.0, user-scalable=no"> <!-- Set width to 321 and prevent zooming -->
+    <meta name="viewport" content="width=320, initial-scale=1.0, user-scalable=no"> <!-- Set width to 320 and prevent zooming -->
     <title>Platformer Game</title>
     <style>
         body {
             margin: 0;
-            overflow: hidden; /* Prevent scrolling */
+            overflow: hidden;
             background-color: #87CEEB; /* Sky blue background */
-            height: 240px; /* Fixed height for top screen */
-            width: 321px; /* Fixed width for top screen */
-            position: relative; /* Enable positioning of elements */
         }
 
         #gameCanvas {
             display: block;
-            background-color: #8B4513; /* Brown ground color */
             margin: 0 auto; /* Center the canvas horizontally */
-        }
-
-        #timeDisplay {
-            position: absolute;
-            bottom: 0; /* Position at the bottom of the screen */
-            left: 0;
-            right: 0;
-            text-align: center; /* Center the text */
-            color: white; /* White text color for visibility */
-            font-size: 14px; /* Font size */
-            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
-            padding: 5px; /* Padding for the text */
+            background-color: #8B4513; /* Brown ground color */
         }
 
         .player {
@@ -48,7 +33,6 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="320" height="240"></canvas>
-    <div id="timeDisplay">Time Played: 0s</div> <!-- Time display -->
     <script>
         var canvas = document.getElementById('gameCanvas');
         var ctx = canvas.getContext('2d');
@@ -86,10 +70,6 @@
             { x: 200, y: 140, width: 100, height: 20 }
         ];
 
-        // Timer variables
-        var timePlayed = 0; // in seconds
-        var timerInterval;
-
         // Draw player
         function drawPlayer() {
             ctx.fillStyle = '#FF0000'; // Red color for the player
@@ -108,15 +88,10 @@
         // Handle key events
         var keys = {};
         window.addEventListener('keydown', function(e) {
-            if (keyMap[e.keyCode]) {
-                keys[keyMap[e.keyCode]] = true;
-                e.preventDefault(); // Prevent default scrolling behavior
-            }
+            if (keyMap[e.keyCode]) keys[keyMap[e.keyCode]] = true;
         });
         window.addEventListener('keyup', function(e) {
-            if (keyMap[e.keyCode]) {
-                keys[keyMap[e.keyCode]] = false;
-            }
+            if (keyMap[e.keyCode]) keys[keyMap[e.keyCode]] = false;
         });
 
         // Update player and check collisions
@@ -159,19 +134,10 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawPlatforms();
             drawPlayer();
-
-            // Update the timer display
-            timePlayed += 1 / 60; // Increment time based on frame rate
-            document.getElementById('timeDisplay').innerText = `Time Played: ${Math.floor(timePlayed)}s`;
         }
 
-        // Start the timer
-        timerInterval = setInterval(update, 1000 / 60);
-
-        // Stop the timer if the game is exited (optional)
-        window.onbeforeunload = function() {
-            clearInterval(timerInterval);
-        };
+        // Start game loop at 60 FPS
+        setInterval(update, 1000 / 60);
     </script>
 </body>
 </html>
