--- a/3ds.html
+++ b/3ds.html
@@ -29,6 +29,15 @@
             background-color: #228B22; /* Green platform color */
             height: 20px;
         }
+
+html,body {
+    overflow: hidden
+}
+
+#divID {
+    overflow: auto; // if you want just vertical scroll overflow-y: auto;
+}
+        
     </style>
 </head>
 <body>
