--- a/3ds.html
+++ b/3ds.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=320, initial-scale=1.0, user-scalable=no"> <!-- Set width to 320 and prevent zooming -->
+    <meta name="viewport" content="width=321, height=457 initial-scale=1.0, user-scalable=no"> <!-- Set width to 320 and prevent zooming -->
     <title>Platformer Game</title>
     <style>
         body {
