--- a/3ds.html
+++ b/3ds.html
@@ -9,15 +9,15 @@
             margin: 0;
             overflow: hidden;
             background-color: #87CEEB; /* Sky blue background */
+            height: 240px; /* Set to the same height as the canvas */
             display: flex;
             justify-content: center;
             align-items: flex-end; /* Align the canvas to the bottom */
-            height: 100vh; /* Take full height of the viewport */
         }
 
         #gameCanvas {
-            display: block;
             background-color: #8B4513; /* Brown ground color */
+            border: 1px solid black; /* Optional: Add a border to make it more visible */
         }
 
         .player {
