--- a/3ds.html
+++ b/3ds.html
@@ -5,27 +5,21 @@
     <meta name="viewport" content="width=320, height=240, initial-scale=1.0, user-scalable=no"> <!-- Adjusted for 3DS -->
     <title>Platformer Game</title>
     <style>
-        /* Ensure body takes the full viewport height */
         body {
             margin: 0;
-            height: 100vh; /* Full height of the viewport */
+            overflow: hidden;
+            background-color: #87CEEB; /* Sky blue background */
+            height: 240px; /* Set to the same height as the canvas */
             display: flex;
             justify-content: center;
-            align-items: flex-end; /* Align canvas to the bottom */
-            background-color: #87CEEB; /* Sky blue background */
-            overflow: hidden; /* Prevent any overflow */
+            align-items: flex-end; /* Align the canvas to the bottom */
         }
 
-        /* Set the canvas with specific height to fit the screen */
         #gameCanvas {
-            width: 320px; /* Fixed width for 3DS */
-            height: 220px; /* Adjust height to allow space for nav bar */
             background-color: #8B4513; /* Brown ground color */
             border: 1px solid black; /* Optional: Add a border to make it more visible */
-            display: block;
         }
 
-        /* Optional styles for player and platforms */
         .player {
             position: absolute;
             background-color: #FF0000; /* Red player color */
@@ -42,7 +36,7 @@
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
+    <canvas id="gameCanvas" width="320" height="240"></canvas>
     <script>
         var canvas = document.getElementById('gameCanvas');
         var ctx = canvas.getContext('2d');
@@ -63,7 +57,7 @@
         // Player properties
         var player = {
             x: 50,
-            y: 180, // Adjusted to fit within the new canvas height
+            y: 200,
             width: 30,
             height: 30,
             speed: 4,
@@ -75,9 +69,9 @@
 
         // Platform properties
         var platforms = [
-            { x: 0, y: 200, width: 320, height: 20 },
-            { x: 100, y: 160, width: 100, height: 20 },
-            { x: 200, y: 120, width: 100, height: 20 }
+            { x: 0, y: 220, width: 320, height: 20 },
+            { x: 100, y: 180, width: 100, height: 20 },
+            { x: 200, y: 140, width: 100, height: 20 }
         ];
 
         // Draw player
