--- a/3ds.html
+++ b/3ds.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=320, height=240, initial-scale=1.0, user-scalable=no"> <!-- Adjusted for 3DS -->
+    <meta name="viewport" content="width=400, height=200, initial-scale=1.0, user-scalable=no"> <!-- Adjusted for 3DS top screen -->
     <title>Platformer Game</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
             background-color: #87CEEB; /* Sky blue background */
-            height: 240px; /* Set to the same height as the canvas */
+            height: 200px; /* Set to the height of the top screen */
             display: flex;
-            justify-content: center;
-            align-items: flex-end; /* Align the canvas to the bottom */
+            flex-direction: column; /* Arrange children vertically */
+            align-items: center; /* Center elements horizontally */
+        }
+
+        #topSpace {
+            height: 0; /* Height of the blank space, adjust if needed */
+            width: 100%;
         }
 
         #gameCanvas {
@@ -36,7 +41,8 @@
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="320" height="240"></canvas>
+    <div id="topSpace"></div> <!-- Blank div for spacing -->
+    <canvas id="gameCanvas" width="400" height="200"></canvas> <!-- Adjusted width and height -->
     <script>
         var canvas = document.getElementById('gameCanvas');
         var ctx = canvas.getContext('2d');
@@ -57,7 +63,7 @@
         // Player properties
         var player = {
             x: 50,
-            y: 200,
+            y: 150, // Adjusted for the new canvas height
             width: 30,
             height: 30,
             speed: 4,
@@ -69,9 +75,9 @@
 
         // Platform properties
         var platforms = [
-            { x: 0, y: 220, width: 320, height: 20 },
-            { x: 100, y: 180, width: 100, height: 20 },
-            { x: 200, y: 140, width: 100, height: 20 }
+            { x: 0, y: 180, width: 400, height: 20 }, // Adjusted width
+            { x: 100, y: 160, width: 100, height: 20 },
+            { x: 200, y: 120, width: 100, height: 20 }
         ];
 
         // Draw player
