--- a/3ds.html
+++ b/3ds.html
@@ -73,12 +73,23 @@
             grounded: false
         };
 
-        // Platform properties
-        var platforms = [
-            { x: 0, y: 180, width: 400, height: 20 }, // Adjusted width
-            { x: 100, y: 160, width: 100, height: 20 },
-            { x: 200, y: 120, width: 100, height: 20 }
+        // Levels definition
+        var levels = [
+            [ // Level 1
+                { x: 0, y: 180, width: 400, height: 20 }, // Ground platform
+                { x: 100, y: 160, width: 100, height: 20 },
+                { x: 200, y: 120, width: 100, height: 20 }
+            ],
+            [ // Level 2
+                { x: 0, y: 180, width: 400, height: 20 }, // Ground platform
+                { x: 50, y: 150, width: 100, height: 20 },
+                { x: 250, y: 100, width: 100, height: 20 },
+                { x: 150, y: 130, width: 50, height: 20 }
+            ]
         ];
+
+        var currentLevel = 0; // Start with level 0
+        var platforms = levels[currentLevel]; // Platforms for the current level
 
         // Draw player
         function drawPlayer() {
@@ -131,6 +142,17 @@
                 player.dy = 0;
             }
 
+            // Check if the player has reached the end of the level
+            if (player.x > canvas.width) {
+                currentLevel++; // Move to the next level
+                if (currentLevel < levels.length) {
+                    resetLevel();
+                } else {
+                    alert("You've completed the game!"); // Game over message
+                    resetGame();
+                }
+            }
+
             // Handle player movement
             if (keys["Left"]) player.x -= player.speed;
             if (keys["Right"]) player.x += player.speed;
@@ -144,6 +166,20 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawPlatforms();
             drawPlayer();
+        }
+
+        // Reset the current level
+        function resetLevel() {
+            player.x = 50; // Reset player's position
+            player.y = 150; // Reset player's height
+            player.dy = 0; // Reset vertical speed
+            platforms = levels[currentLevel]; // Load the new level's platforms
+        }
+
+        // Reset game to first level
+        function resetGame() {
+            currentLevel = 0; // Reset to level 0
+            resetLevel(); // Reset level
         }
 
         // Start game loop at 60 FPS
