--- a/3ds.html
+++ b/3ds.html
@@ -9,39 +9,26 @@
             margin: 0;
             overflow: hidden;
             background-color: #87CEEB; /* Sky blue background */
-            height: 200px;
+            height: 200px; /* Set to the height of the top screen */
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            flex-direction: column; /* Arrange children vertically */
+            align-items: center; /* Center elements horizontally */
         }
 
         #topSpace {
-            height: 0;
+            height: 0; /* Height of the blank space, adjust if needed */
             width: 100%;
         }
 
         #gameCanvas {
             background-color: #8B4513; /* Brown ground color */
-            border: 1px solid black;
-        }
-
-        .player {
-            position: absolute;
-            background-color: #FF0000; /* Red player color */
-            width: 30px;
-            height: 30px;
-        }
-
-        .platform {
-            position: absolute;
-            background-color: #228B22; /* Green platform color */
-            height: 20px;
+            border: 1px solid black; /* Optional: Add a border to make it more visible */
         }
     </style>
 </head>
 <body>
-    <div id="topSpace"></div>
-    <canvas id="gameCanvas" width="400" height="200"></canvas>
+    <div id="topSpace"></div> <!-- Blank div for spacing -->
+    <canvas id="gameCanvas" width="400" height="200"></canvas> <!-- Adjusted width and height -->
     <script>
         var canvas = document.getElementById('gameCanvas');
         var ctx = canvas.getContext('2d');
@@ -116,22 +103,23 @@
 
         // Update player and check collisions
         function update() {
-            player.dy += player.gravity;
-            player.y += player.dy;
+            player.dy += player.gravity; // Apply gravity
+            player.y += player.dy; // Move player by its vertical speed
 
             // Check for collision with platforms
-            player.grounded = false;
+            player.grounded = false; // Reset grounded state
             for (var i = 0; i < platforms.length; i++) {
                 var platform = platforms[i];
+                // Check for collision
                 if (
                     player.x < platform.x + platform.width &&
                     player.x + player.width > platform.x &&
                     player.y + player.height < platform.y + platform.height &&
                     player.y + player.height + player.dy >= platform.y
                 ) {
-                    player.dy = 0;
-                    player.y = platform.y - player.height;
-                    player.grounded = true;
+                    player.dy = 0; // Reset vertical speed
+                    player.y = platform.y - player.height; // Place player on top of platform
+                    player.grounded = true; // Player is grounded
                 }
             }
 
@@ -142,7 +130,7 @@
             }
 
             // Check if the player has reached the end of Level 1
-            if (currentLevel === 0 && player.x > canvas.width) {
+            if (currentLevel === 0 && player.x + player.width > canvas.width) {
                 currentLevel++; // Move to Level 2
                 resetLevel(); // Reset for the new level
             }
